--- a/Modulo II/Programação Web II/Dogdev/assets/css/seen.css
+++ b/Modulo II/Programação Web II/Dogdev/assets/css/seen.css
@@ -4,7 +4,7 @@
 }
 .seen .container{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     row-gap: 3rem;
 }
 .seen .container div{
@@ -14,6 +14,6 @@
 }
 @media(width>600px){
     .seen .container{
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(4, 1fr);
     }
 }
