--- a/Modulo II/Programação Web II/Dogdev/assets/css/faq.css
+++ b/Modulo II/Programação Web II/Dogdev/assets/css/faq.css
@@ -27,3 +27,21 @@
     gap: 2rem;
     cursor: pointer;
 }
+.faq .accordion .item .title img{
+    transition: all ease .5; 
+}
+.faq .accordion .item .body{
+    line-height: 2.5rem;
+    overflow-y: hidden;
+    max-height: 0;
+    transition: all ease .5s;
+}
+.faq .accordion .item .body p{
+    padding-bottom: 2rem;
+}
+.faq .accordion .item .opened .body{
+    max-height: 100vh;
+}
+.faq .accordion .item .opened .title img{
+    transform: rotate(180deg);
+}
